Fix timeline spacing

--- a/style.css
+++ b/style.css
@@ -16,14 +16,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 25px 352px;
+  padding: 25px;
   padding-top: 60px;
   height: 107px;
   background-color:#7d1e57;
 }
 
 .container {
-  width: 992.5px;
+  width: 992px;
+  min-width: 992px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
